fixes & cleanup